# tdx-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.agents/skills/: cpp-code-review  cpp-core-guidelines
.claude/PRPs/plans/: phase1-protocol-layer-a-share.plan.md  phase2-extended-sp-quotes.plan.md  phase3-data-manager.plan.md  phase4-v2-improvements.plan.md
.claude/PRPs/prds/: phase1-golden-byte-stream.md  phase6-intraday-shm-design.md  tdx-cpp.prd.md
.claude/PRPs/reviews/: phase6-intraday-shm.review.md  tdx-cpp.architecture-review.md
cfg/: holidays.json  servers.json
include/tdx/: consts.hpp  errors.hpp  types.hpp
include/tdx/batch/: batch_fetch.hpp
include/tdx/data/: adjust.hpp  calendar.hpp  resampler.hpp  scaling.hpp  sync_state.hpp  tdx_data.hpp
include/tdx/proto/: bitmap.hpp  block_reader.hpp  codec.hpp  connection.hpp  ex_parsers.hpp  frame.hpp  heartbeat.hpp  parsers.hpp  retry.hpp  server_pool.hpp  sp_codec.hpp  sp_parsers.hpp  vipdoc_reader.hpp
include/tdx/query/: duckdb_query.hpp
include/tdx/quotes/: ext_quotes.hpp  sp_quotes.hpp  std_quotes.hpp
include/tdx/shm/: payload.hpp  segment.hpp  snapshot.hpp
include/tdx/taos/: taos_bind.hpp  taos_connection.hpp  taos_import.hpp
include/tdx/util/: byte_order.hpp  code_validate.hpp  gbk.hpp  time_util.hpp  zlib_wrap.hpp
scripts/: fetch-today.py  record_golden.py  reimport.py  run_gtest.sh  setup_external.sh  view.py
src/: CMakeLists.txt  smoke.cc
src/batch/: CMakeLists.txt  batch_fetch.cpp
src/cli/: fetch_quotes.cpp  import.cpp  main.cpp  quotes_reader.cpp
src/data/: CMakeLists.txt  adjust.cpp  calendar.cpp  resampler.cpp  sync_state.cpp  tdx_data.cpp
src/proto/: bitmap.cpp  block_reader.cpp  codec.cpp  connection.cpp  ex_parsers.cpp  frame.cpp  heartbeat.cpp  parsers.cpp  parsers_quotes.cpp  retry.cpp  server_pool.cpp  sp_codec.cpp  sp_parsers.cpp  vipdoc_reader.cpp
src/query/: CMakeLists.txt  duckdb_query.cpp
src/quotes/: ext_quotes.cpp  sp_quotes.cpp  std_quotes.cpp
src/shm/: CMakeLists.txt  segment.cpp  snapshot.cpp
src/taos/: CMakeLists.txt  taos_connection.cpp  taos_import.cpp
src/util/: gbk.cpp  time_util.cpp  zlib_wrap.cpp
tests/: CMakeLists.txt  test_bars.cpp  test_codec.cpp  test_duckdb.cpp  test_e2e.cpp  test_fetch_history.cpp  test_frame.cpp  test_golden.cpp  test_import_filter.cpp  test_json.cpp  test_parsers.cpp  test_phase2.cpp  test_phase3.cpp  test_reconnect.cpp  test_retry.cpp  test_server_pool.cpp  test_shm.cpp  test_sp_codec.cpp  test_sp_e2e.cpp  test_sync4.cpp  test_util.cpp  test_vipdoc_reader.cpp
tests/fixtures/golden/: ex_kline_00700_day.expected.json  kline_600000_day.expected.json  quotes_600000.expected.json  tick_600000.expected.json  transaction_600000.expected.json
tools/: mmap_viewer.cpp  zxg_viewer.cpp
